--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pixel Halls</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Orbitron', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       text-align: center;
-      padding: 50px;
-      background: #f0f0f0;
     }
     h1 {
-      color: #333;
+      font-size: 3rem;
+      margin-bottom: 10px;
+      color: #00ffc8;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #cccccc;
+    }
+    .glow {
+      text-shadow: 0 0 5px #00ffc8, 0 0 10px #00ffc8, 0 0 20px #00ffc8;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to PixelHalls.com</h1>
-  <p>This site is under construction. Check back soon!</p>
+  <h1 class="glow">Welcome to Pixel Halls</h1>
+  <p>Creative ideas live here. Site under construction.</p>
 </body>
 </html>
