--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       text-align: center;
     }
     h1 {
-      font-size: 3rem;
+      font-size: 5vw; 
       margin-bottom: 10px;
       color: #00ffc8;
     }
