--- a/index.html
+++ b/index.html
@@ -2,39 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pixel Halls</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Orbitron', sans-serif;
+    html, body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(100deg, #1a1a1a, #2d2d2d);
-      color: #ffffff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
+      color: white;
+      overflow-x: hidden;
+    }
+
+    section {
       height: 100vh;
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3rem;
+      position: relative;
+      z-index: 1;
     }
-    h1 {
-      font-size: 5vw; 
-      margin-bottom: 10px;
-      color: #00ffc8;
+
+    .bg-circle {
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      background: radial-gradient(circle at center, rgba(0,255,200,0.05), transparent 60%);
+      animation: pulse 6s infinite ease-in-out;
+      z-index: 0;
     }
-    p {
-      font-size: 1.2rem;
-      color: #cccccc;
-    }
-    .glow {
-      text-shadow: 0 0 5px #00ffc8, 0 0 10px #00ffc8, 0 0 20px #00ffc8;
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+        opacity: 0.3;
+      }
+      50% {
+        transform: scale(1.1);
+        opacity: 0.6;
+      }
     }
   </style>
 </head>
 <body>
-  <h1 class="glow">Welcome to Pixel Halls</h1>
-  <p>Creative ideas live here. Site under construction.</p>
+  <div class="bg-circle"></div>
+  <section id="intro">Welcome to Pixel Halls</section>
+  <section id="scroll">Scroll to see more</section>
+  <section id="end">More Coming Soon</section>
+
+  <script>
+    window.addEventListener('scroll', () => {
+      const scrollY = window.scrollY;
+      document.body.style.backgroundPosition = `center ${scrollY * 0.5}px`;
+    });
+  </script>
 </body>
 </html>
