--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       z-index: 0;
     }
 
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 2;
+    }
+
     @keyframes pulse {
       0%, 100% {
         transform: scale(1);
@@ -50,11 +58,36 @@
 </head>
 <body>
   <div class="bg-circle"></div>
+  <canvas id="pixelCanvas"></canvas>
+
   <section id="intro">Welcome to Pixel Halls</section>
   <section id="scroll">Scroll to see more</section>
   <section id="end">More Coming Soon</section>
 
   <script>
+    const canvas = document.getElementById('pixelCanvas');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    function drawPixel(x, y) {
+      const size = 10;
+      const r = Math.floor(Math.random() * 255);
+      const g = Math.floor(Math.random() * 255);
+      const b = Math.floor(Math.random() * 255);
+      ctx.fillStyle = `rgba(${r}, ${g}, ${b}, 0.3)`;
+      ctx.fillRect(x - size / 2, y - size / 2, size, size);
+    }
+
+    window.addEventListener('mousemove', (e) => {
+      drawPixel(e.clientX, e.clientY);
+    });
+
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+
     window.addEventListener('scroll', () => {
       const scrollY = window.scrollY;
       document.body.style.backgroundPosition = `center ${scrollY * 0.5}px`;
