--- a/index.html
+++ b/index.html
@@ -22,36 +22,6 @@
       z-index: 1;
     }
 
-    .center-text {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 4;
-      font-size: 4rem;
-      text-align: center;
-      pointer-events: none;
-    }
-
-    .center-text span {
-      display: inline-block;
-      animation: bubbleChar 1.5s infinite ease-in-out alternate;
-    }
-
-    .center-text span:nth-child(odd) {
-      animation-delay: 0.1s;
-    }
-
-    .center-text span:nth-child(even) {
-      animation-delay: 0.3s;
-    }
-
-    @keyframes bubbleChar {
-      0% { transform: translateY(0) scale(1); }
-      50% { transform: translateY(-5px) scale(1.2); }
-      100% { transform: translateY(0) scale(1); }
-    }
-
     .bg-circle {
       position: fixed;
       width: 100vw;
@@ -86,7 +56,6 @@
 <body>
   <div class="bg-circle"></div>
   <canvas id="pixelCanvas"></canvas>
-  <div class="center-text" id="centerText"></div>
 
   <section></section>
   <section></section>
@@ -98,10 +67,6 @@
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
-    const centerText = document.getElementById('centerText');
-    const phrase = "Pixel Halls";
-    centerText.innerHTML = phrase.split('').map(letter => `<span>${letter}</span>`).join('');
-
     class Pixel {
       constructor(x, y, size, color, life = null) {
         this.x = x;
@@ -111,7 +76,7 @@
         this.color = color;
         this.hovered = false;
         this.created = Date.now();
-        this.life = life; // in ms; null = permanent
+        this.life = life;
       }
 
       draw(ctx) {
@@ -127,16 +92,6 @@
         if (this.life) {
           const fade = 1 - age / this.life;
           scale *= fade;
-        }
-
-        const textRect = centerText.getBoundingClientRect();
-        if (
-          this.x > textRect.left &&
-          this.x < textRect.right &&
-          this.y > textRect.top &&
-          this.y < textRect.bottom
-        ) {
-          return true; // skip drawing overlapping pixels
         }
 
         ctx.save();
@@ -169,9 +124,32 @@
     function generatePixelsGrid() {
       const spacing = 30;
       const offset = 5;
+      const centerX = canvas.width / 2;
+      const centerY = canvas.height / 2;
+
+      const pShape = [
+        [0,0],[0,1],[0,2],[0,3],
+        [1,0],[1,2],
+        [2,0],[2,1],
+      ];
+
+      const pPixelCoords = new Set();
+      const pScale = 30;
+      const pOffsetX = -1;
+      const pOffsetY = -2;
+
+      for (const [dx, dy] of pShape) {
+        const px = Math.round(centerX + (dx + pOffsetX) * spacing);
+        const py = Math.round(centerY + (dy + pOffsetY) * spacing);
+        pPixelCoords.add(`${px},${py}`);
+        spawnPixel(px, py);
+      }
+
       for (let x = 0; x < canvas.width; x += spacing) {
         for (let y = 0; y < canvas.height; y += spacing) {
-          spawnPixel(x + offset, y + offset);
+          if (!pPixelCoords.has(`${x + offset},${y + offset}`)) {
+            spawnPixel(x + offset, y + offset);
+          }
         }
       }
     }
@@ -190,17 +168,17 @@
     let mouseY = 0;
 
     canvas.addEventListener('mousemove', (e) => {
-  const rect = canvas.getBoundingClientRect();
-  mouseX = e.clientX - rect.left;
-  mouseY = e.clientY - rect.top;
-  const radius = 50;
-  pixels.forEach(p => {
-    const dx = p.x - mouseX;
-    const dy = p.y - mouseY;
-    const distance = Math.sqrt(dx * dx + dy * dy);
-    p.hovered = distance < radius;
-  });
-});
+      const rect = canvas.getBoundingClientRect();
+      mouseX = e.clientX - rect.left;
+      mouseY = e.clientY - rect.top;
+      const radius = 50;
+      pixels.forEach(p => {
+        const dx = p.x - mouseX;
+        const dy = p.y - mouseY;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+        p.hovered = distance < radius;
+      });
+    });
 
     window.addEventListener('resize', () => {
       canvas.width = window.innerWidth;
