--- a/index.html
+++ b/index.html
@@ -2,24 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pixel Halls</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Welcome to Pixel Halls</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
-      color: white;
+      background: linear-gradient(to bottom, #021026, #071f3f);
+      color: rgba(255, 255, 255, 0.85);
       overflow-x: hidden;
-    }
-
-    section {
-      height: 100vh;
-      font-size: 3rem;
-      position: relative;
-      z-index: 1;
     }
 
     .bg-circle {
@@ -28,114 +21,155 @@
       height: 100vh;
       top: 0;
       left: 0;
-      background: radial-gradient(circle at center, rgba(0,255,200,0.05), transparent 60%);
+      background: radial-gradient(circle at center, rgba(100,150,255,0.05), transparent 60%),
+                  repeating-linear-gradient(45deg, rgba(80,160,255,0.03) 0px, rgba(80,160,255,0.03) 2px, transparent 2px, transparent 6px);
       animation: pulse 6s infinite ease-in-out;
       z-index: 0;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 0.3; }
+      50% { transform: scale(1.1); opacity: 0.6; }
     }
 
     canvas {
       position: fixed;
       top: 0;
       left: 0;
+      width: 100vw !important;
+      height: 100vh !important;
       pointer-events: auto;
       z-index: 2;
+      display: block;
     }
 
-    @keyframes pulse {
-      0%, 100% {
-        transform: scale(1);
-        opacity: 0.3;
-      }
-      50% {
-        transform: scale(1.1);
-        opacity: 0.6;
-      }
+    .footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      color: white;
+      text-align: right;
+      padding: 10px 20px;
+      font-weight: 600;
+      font-size: 1rem;
+      z-index: 3;
+      display: flex;
+      justify-content: flex-end;
+      gap: 30px;
+    }
+
+    .footer a {
+      color: rgba(255, 255, 255, 0.7);
+      text-decoration: none;
+      transition: color 0.2s ease-in-out;
+    }
+
+    .footer a:hover {
+      color: rgba(255, 255, 255, 1);
     }
   </style>
 </head>
 <body>
   <div class="bg-circle"></div>
   <canvas id="pixelCanvas"></canvas>
-  <section></section>
-  <section></section>
-  <section></section>
+
+  <div class="footer">
+    <a href="index.html" style="padding-right: 10px;">Home</a>
+    <a href="about.html" style="padding-right: 70px;">About</a>
+  </div>
 
   <script>
     const canvas = document.getElementById('pixelCanvas');
     const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+
+    resizeCanvas();
+    window.addEventListener('resize', () => {
+      resizeCanvas();
+      pixels.length = 0;
+      generatePixelsGrid();
+    });
 
     class Pixel {
-      constructor(x, y, size, color, life = null) {
+      constructor(x, y, size, color, isText = false) {
         this.x = x;
         this.y = y;
+        this.origX = x;
+        this.origY = y;
         this.baseSize = size;
-        this.size = size;
         this.color = color;
+        this.isText = isText;
         this.hovered = false;
-        this.created = Date.now();
-        this.life = life;
       }
 
       draw(ctx) {
         const time = performance.now() / 1000;
-        const age = Date.now() - this.created;
-        const basePulse = 0.1 * Math.sin(time * 2 + this.x + this.y);
+        const wave = (
+          Math.sin((this.x * 0.002 + time * 1.5)) *
+          Math.cos((this.y * 0.002 + time * 1.2)) +
+          Math.sin((this.x * 0.001 + this.y * 0.001 + time)) *
+          Math.cos((this.y * 0.001 - this.x * 0.001 + time * 0.5))
+        ) / 2;
+
+        const basePulse = 1.2 * wave + 0.4 * Math.sin(this.x * 0.003 + this.y * 0.003 + time * 0.7);
         const hoverPulse = this.hovered ? 0.6 * Math.sin(time * 5) : 0;
         const totalPulse = 1 + basePulse + hoverPulse;
         const angle = this.hovered ? Math.sin(time * 6) * 0.2 : 0;
-        let scale = this.baseSize * totalPulse;
+        const scale = Math.max(2, this.baseSize * totalPulse);
 
-        if (this.life && age > this.life) return false;
-        if (this.life) {
-          const fade = 1 - age / this.life;
-          scale *= fade;
+        const colorWave = 0.5 + 0.5 * Math.sin((this.x + time * 100) * 0.003 + (this.y + time * 100) * 0.003);
+        const intensity = Math.floor(100 * colorWave);
+        if (!this.isText) {
+          const colorChoices = [
+            `rgba(${Math.floor(intensity * 0.1)}, ${Math.floor(intensity * 0.3)}, ${Math.floor(intensity * 2)}, 0.85)`,
+            `rgba(${Math.floor(intensity * 0.2)}, ${Math.floor(intensity * 0.6)}, ${Math.floor(intensity * 1.6)}, 0.85)`,
+            `rgba(${Math.floor(intensity * 0.2)}, ${Math.floor(intensity * 0.2)}, ${Math.floor(intensity * 2.2)}, 0.85)`
+          ];
+          this.color = colorChoices[(this.x + this.y) % colorChoices.length];
         }
 
         ctx.save();
         ctx.translate(this.x, this.y);
         ctx.rotate(angle);
+        ctx.shadowColor = this.isText ? this.color : 'transparent';
+        ctx.shadowBlur = this.isText ? Math.min(64, 100 - scale) : 0;
         ctx.fillStyle = this.color;
         ctx.beginPath();
         ctx.roundRect(-scale / 2, -scale / 2, scale, scale, 3);
         ctx.fill();
         ctx.restore();
-
-        return true;
-      }
-
-      checkHover(mx, my) {
-        const half = this.baseSize / 2;
-        this.hovered = mx > this.x - half && mx < this.x + half && my > this.y - half && my < this.y + half;
       }
     }
 
     const pixels = [];
 
-    function spawnPixel(x, y, colorOverride = null, temporary = false) {
-      const size = 14;
-      const color = colorOverride || (Math.random() > 0.5 ? 'rgba(255,255,255,0.7)' : 'rgba(0,0,0,0.7)');
-      const life = temporary ? 1000 + Math.random() * 1000 : null;
-      pixels.push(new Pixel(x, y, size, color, life));
+    function spawnPixel(x, y, colorOverride = null, isText = false) {
+      const size = window.innerWidth < 768 ? 8 : 14;
+      const color = colorOverride || 'rgba(60,90,200,0.7)';
+      pixels.push(new Pixel(x, y, size, color, isText));
     }
 
     function generatePixelsGrid() {
-      const spacing = 30;
+      const spacing = window.innerWidth < 768 ? 20 : 30;
       const offset = 5;
       const centerX = canvas.width / 2;
       const centerY = canvas.height / 2;
 
       const textMap = [
-        "PPP           l     H  H     l l  ",
-        "P P i         l     H  H     l l sss  ",
-        "PPP   x x eee l     HHHH aaa l l ss ",
-        "P   i  x  e   l     H  H a a l l   s ",
-        "P   i x x eee l     H  H aaaal l sss "
+        "PPP           l   H  H     l l  ",
+        "P P i         l   H  H     l l sss  ",
+        "PPP   x x eee l   HHHH aaa l l ss ",
+        "P   i  x  e   l   H  H a a l l   s ",
+        "P   i x x eee l   H  H aaaal l sss "
       ];
 
-      const pPixelCoords = [];
-      const textPixelSize = Math.min(canvas.width, canvas.height) / 60;
+      const pPixelCoords = new Set();
+      const textPixelSize = window.innerWidth < 768 ? 8 : 14;
       const pSpacing = textPixelSize;
       const charSpacing = 1;
 
@@ -144,28 +178,22 @@
           if (textMap[row][col] !== ' ') {
             const px = Math.round(centerX + (col - textMap[0].length / 2) * (pSpacing + charSpacing));
             const py = Math.round(centerY + (row - textMap.length / 2) * (pSpacing + charSpacing));
-            pPixelCoords.push([px, py]);
-            spawnPixel(px, py, 'rgba(255,255,255,0.9)');
+            pPixelCoords.add(`${px},${py}`);
+            spawnPixel(px, py, 'rgba(100,150,255,1)', true);
           }
         }
       }
 
-      const exclusionRadius = spacing;
-      for (let x = 0; x < canvas.width; x += spacing) {
-        for (let y = 0; y < canvas.height; y += spacing) {
-          const roundedX = Math.round(x + offset);
-          const roundedY = Math.round(y + offset);
-          let tooClose = false;
-          for (const [px, py] of pPixelCoords) {
-            const dx = px - roundedX;
-            const dy = py - roundedY;
-            const distance = Math.sqrt(dx * dx + dy * dy);
-            if (distance < exclusionRadius) {
-              tooClose = true;
-              break;
-            }
-          }
-          if (!tooClose) {
+      const startX = centerX - Math.floor(canvas.width / (pSpacing + charSpacing) / 2) * (pSpacing + charSpacing) - (pSpacing + charSpacing);
+      const startY = centerY - Math.floor(canvas.height / (pSpacing + charSpacing) / 2) * (pSpacing + charSpacing) - (pSpacing + charSpacing) + 7;
+      const rows = Math.ceil(canvas.height / (pSpacing + charSpacing)) + 1;
+      const cols = Math.ceil(canvas.width / (pSpacing + charSpacing)) + 1;
+
+      for (let row = 0; row < rows; row++) {
+        for (let col = 0; col < cols; col++) {
+          const roundedX = Math.round(startX + col * (pSpacing + charSpacing));
+          const roundedY = Math.round(startY + row * (pSpacing + charSpacing));
+          if (!pPixelCoords.has(`${roundedX},${roundedY}`)) {
             spawnPixel(roundedX, roundedY);
           }
         }
@@ -174,62 +202,11 @@
 
     function animate() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      for (let i = pixels.length - 1; i >= 0; i--) {
-        if (!pixels[i].draw(ctx)) {
-          pixels.splice(i, 1);
-        }
+      for (let p of pixels) {
+        p.draw(ctx);
       }
       requestAnimationFrame(animate);
     }
-
-    let mouseX = 0;
-    let mouseY = 0;
-
-    canvas.addEventListener('mousemove', (e) => {
-      const rect = canvas.getBoundingClientRect();
-      mouseX = e.clientX - rect.left;
-      mouseY = e.clientY - rect.top;
-      const radius = 50;
-      pixels.forEach(p => {
-        const dx = p.x - mouseX;
-        const dy = p.y - mouseY;
-        const distance = Math.sqrt(dx * dx + dy * dy);
-        p.hovered = distance < radius;
-      });
-    });
-
-    canvas.addEventListener('touchmove', (e) => {
-      const touch = e.touches[0];
-      const rect = canvas.getBoundingClientRect();
-      mouseX = touch.clientX - rect.left;
-      mouseY = touch.clientY - rect.top;
-      const radius = 50;
-      pixels.forEach(p => {
-        const dx = p.x - mouseX;
-        const dy = p.y - mouseY;
-        const distance = Math.sqrt(dx * dx + dy * dy);
-        p.hovered = distance < radius;
-      });
-    });
-
-    window.addEventListener('resize', () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-      pixels.length = 0;
-      generatePixelsGrid();
-    });
-
-    window.addEventListener('orientationchange', () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-      pixels.length = 0;
-      generatePixelsGrid();
-    });
-
-    window.addEventListener('scroll', () => {
-      const scrollY = window.scrollY;
-      document.body.style.backgroundPosition = `center ${scrollY * 0.5}px`;
-    });
 
     generatePixelsGrid();
     animate();
