--- a/about.html
+++ b/about.html
@@ -24,8 +24,7 @@
       width: 100vw !important;
       height: 100vh !important;
       pointer-events: auto;
-      z-index: 2;
-      display: block;
+      z-index: 2 #this is it
     }
 
     .footer {
