--- a/spider/index.html
+++ b/spider/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Spider</title>
+  <style>
+    body {
+      margin: 0;
+      background: black;
+      overflow: hidden;
+    }
+
+    canvas {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="spiderCanvas"></canvas>
+  <script src="spiders.js"></script>
+</body>
+</html>
 
