--- a/spider/index.html
+++ b/spider/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <canvas id="spiderCanvas"></canvas>
-  <script src="spiders.js"></script>
+  <script src="spider.js"></script>
 </body>
 </html>
 
