--- a/spider/index.html
+++ b/spider/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <canvas id="spiderCanvas"></canvas>
+  <canvas id=""></canvas>
   <script src="spider.js"></script>
 </body>
 </html>
