--- a/spider/index.html
+++ b/spider/index.html
@@ -15,8 +15,8 @@
   </style>
 </head>
 <body>
-  <canvas id="spiderCanvas"></canvas>
-  <script src="spider.js"></script>
+  <canvas id=""></canvas>
+  <script src=""></script>
 </body>
 </html>
 
