--- a/spider/index.html
+++ b/spider/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Spider</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Spider Page</title>
   <style>
     body {
       margin: 0;
-      background: black;
+      background-color: black;
+      color: #00ff00;
+      font-family: monospace;
       overflow: hidden;
     }
-
     canvas {
       display: block;
     }
   </style>
 </head>
 <body>
-  <canvas id=""></canvas>
-  <script src=""></script>
+  <canvas id="spiderCanvas"></canvas>
+
+  <script src="spider.js"></script>
 </body>
 </html>
-
