--- a/spider/index.html
+++ b/spider/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Spider Page</title>
+  <title>Squash the Spiders</title>
   <style>
     body {
       margin: 0;
-      background-color: black;
-      color: #00ff00;
-      font-family: monospace;
       overflow: hidden;
+      background-color: black;
     }
     canvas {
       display: block;
@@ -19,7 +17,6 @@
 </head>
 <body>
   <canvas id="spiderCanvas"></canvas>
-
   <script src="spider.js"></script>
 </body>
 </html>
