--- a/ra1n/index.html
+++ b/ra1n/index.html
@@ -9,5 +9,9 @@
 <body>
   <canvas id="rain-canvas"></canvas>
   <script src="rain.js"></script>
+  <script>
+  console.log("JS is loading!");
+</script>
+
 </body>
 </html>
