--- a/pet/index.html
+++ b/pet/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Modesta Naciute">
     <link rel="icon" href="favicon.ico">
 
-    <title>Modesta's tamagotchi</title>
+    <title>tamagotchi</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -144,9 +144,7 @@
 			
     </main>
 
-    <footer class="container">
-      <p><a href="https://www.linkedin.com/in/modesta/" target="_blank">&copy; Modesta Naciute 2018</a></p>
-    </footer>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
