--- a/google/index.html
+++ b/google/index.html
@@ -7,14 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1 class="logo">PixelSearch</h1>
-    <form class="search-box" action="https://www.google.com/search" method="GET">
-      <input type="text" name="q" placeholder="Search..." autofocus />
-      <div class="buttons">
-        <input type="submit" value="Pixel Search" />
-        <input type="submit" value="I'm Feeling Lucky" formaction="https://www.google.com/search?btnI=1" />
-      </div>
+<div class="logo">
+  <span class="p">P</span><span class="i">i</span><span class="x">x</span><span class="e">e</span><span class="l">l</span>
+  <span class="s">S</span><span class="e2">e</span><span class="a">a</span><span class="r">r</span><span class="c">c</span><span class="h">h</span>
+</div>
+
     </form>
   </div>
 </body>
