--- a/google/index.html
+++ b/google/index.html
@@ -7,12 +7,18 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="logo">
-  <span class="p">P</span><span class="i">i</span><span class="x">x</span><span class="e">e</span><span class="l">l</span>
-  <span class="s">S</span><span class="e2">e</span><span class="a">a</span><span class="r">r</span><span class="c">c</span><span class="h">h</span>
-</div>
-
-    </form>
+  <div class="container">
+    <div class="logo">
+      <span class="p">P</span><span class="i">i</span><span class="x">x</span><span class="e">e</span><span class="l">l</span>
+      <span class="s">S</span><span class="e2">e</span><span class="a">a</span><span class="r">r</span><span class="c">c</span><span class="h">h</span>
+    </div>
+    <div class="search-box">
+      <input type="text" placeholder="Search Pixel or type a URL" />
+    </div>
+    <div class="buttons">
+      <input type="submit" value="Pixel Search" />
+      <input type="submit" value="I'm Feeling Lucky" />
+    </div>
   </div>
 </body>
 </html>
