--- a/tweet/index.html
+++ b/tweet/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <div class="sidebar">
-    <h2>Logo</h2>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Explore</a>
-      <a href="#">Notifications</a>
-      <a href="#">Messages</a>
-    </nav>
-  </div>
+  <img src="logo.png" alt="Logo" class="logo" />
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Explore</a>
+    <a href="#">Notifications</a>
+    <a href="#">Messages</a>
+  </nav>
+</div>
 
   <div class="feed">
     <div class="tweet-box">
