--- a/tweet/index.html
+++ b/tweet/index.html
@@ -3,29 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mini Twitter</title>
+  <title>Tweet</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="sidebar">
-  <img src="logo.png" alt="Logo" class="logo" />
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Explore</a>
-    <a href="#">Notifications</a>
-    <a href="#">Messages</a>
-  </nav>
-</div>
+    <img src="logo.png" alt="Logo" class="logo" />
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Explore</a>
+      <a href="#">Notifications</a>
+      <a href="#">Messages</a>
+    </nav>
+  </div>
 
   <div class="feed">
     <div class="tweet-box">
       <textarea placeholder="What's happening?"></textarea>
       <button>Tweet</button>
     </div>
-
-    <div class="tweets">
-      <!-- Tweets will show up here -->
-    </div>
+    <div class="tweets"></div>
   </div>
 
   <script src="script.js"></script>
