--- a/win98/index.html
+++ b/win98/index.html
@@ -38,7 +38,7 @@
             padding: 4px;
             cursor: pointer;
             border-radius: 2px;
-        }
+}
 
         .desktop-icon:hover {
             background: rgba(0, 0, 255, 0.2);
@@ -72,7 +72,7 @@
         .taskbar {
             height: 30px;
             background: #c0c0c0;
-            border-top: 1px solid #white;
+            border-top: 1px solid #ffffff;
             display: flex;
             align-items: center;
             padding: 2px;
@@ -161,7 +161,7 @@
             text-orientation: mixed;
             width: 24px;
             float: left;
-            height: 100%;
+            height: 50%;
         }
 
         .start-menu-items {
